<resources>
    <string name="app_name">MarvelHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="example_text">Example text</string>
    <string name="image_from_marvel_api">Image from Marvel Api</string>
    <string name="events">Events</string>
    <string name="comics">Comics</string>
    <string name="characters">Characters</string>
    <string name="background_image">Background Image</string>
    <string name="line_mark">-</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum lorem sed risus ultricies tristique. Est velit egestas dui id ornare arcu odio ut. Tincidunt augue interdum velit euismod. Nibh venenatis cras sed felis eget velit aliquet sagittis. Donec ac odio tempor orci. Ultricies integer quis auctor elit sed vulputate mi sit. Non blandit massa enim nec dui nunc. Arcu dui vivamus arcu felis bibendum ut. Etiam non quam lacus suspendisse. Eget nulla facilisi etiam dignissim diam quis enim lobortis scelerisque.

        Sit amet aliquam id diam maecenas. Urna neque viverra justo nec. Quis eleifend quam adipiscing vitae proin. Lacus suspendisse faucibus interdum posuere lorem ipsum. Ullamcorper a lacus vestibulum sed arcu non odio. Mollis aliquam ut porttitor leo a diam. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Feugiat in ante metus dictum at tempor. Odio eu feugiat pretium nibh ipsum consequat nisl. Sodales ut eu sem integer vitae justo. Enim ut tellus elementum sagittis vitae. Etiam sit amet nisl purus in mollis nunc sed. Ornare lectus sit amet est placerat in. In hendrerit gravida rutrum quisque non tellus orci. Congue eu consequat ac felis donec. Gravida quis blandit turpis cursus in hac. Nunc faucibus a pellentesque sit. Ut pharetra sit amet aliquam id diam.</string>
    <string name="toolbar_image">Toolbar Image</string>
    <string name="release_date">Release date</string>
    <string name="end_date">End date</string>
    <string name="description">Description</string>
    <string name="featuring_characters">Featuring characters</string>
    <string name="back_arrow">Back arrow</string>
    <string name="search_event_text">Search for events…</string>
    <string name="search_comics_text">Search for comics</string>
    <string name="full_name">%s %s</string>
    <string name="show_more">Show more</string>
    <string name="creators">Creators</string>
    <string name="browse_comics_text">Browse comics…</string>
    <string name="comics_price">%.2f $</string>
    <string name="there_are_no_characters">There are no characters</string>
    <string name="there_are_no_creators">There are no creators</string>
    <string name="comics_the_character_featured_in">Comics The Character featured in</string>
</resources>